--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	</head>
 	
 	<body>
-		
-		</script>
+		<div id="arena-live" data-publisher="chat-63970" data-event="6pzw" data-version="2"></div><script src="https://go.arena.im/public/js/arenalib.js?p=chat-63970&e=6pzw"></script>
 	</body>
 </html>
